Spacing fixup for header with no image w or w/o section menu in header

--- a/src/scss/page-types/_interior-page.scss
+++ b/src/scss/page-types/_interior-page.scss
@@ -88,6 +88,14 @@
   .ood-interior-page__header {
     &-title-wrapper {
       @include responsive-spacing('padding', null null 9);
+
+      @include grid-media('lg') {
+        @include padding(get-responsive-spacing-value(7, 'tablet') null null);
+      }
+
+      @include grid-media('2xl') {
+        @include padding(get-responsive-spacing-value(7, 'desktop') null null);
+      }
     }
 
     &-intro-wrapper {
@@ -163,13 +171,19 @@
   .ood-interior-page__title {
     @include margin(null null null 0);
 
-    @include grid-media-max('sm') {
-      @include margin(get-responsive-spacing-value(5, 'mobile') null 0.6em);
+    @include grid-media-max('md') {
+      @include margin(null null 0.6em);
     }
+  }
+}
 
-    @include grid-media-only('md') {
-      @include margin(get-responsive-spacing-value(5, 'tablet') null 0.6em);
-    }
+.ood-interior-page__title {
+  @include grid-media-max('sm') {
+    @include margin(get-responsive-spacing-value(5, 'mobile') null null);
+  }
+
+  @include grid-media-only('md') {
+    @include margin(get-responsive-spacing-value(5, 'tablet') null null);
   }
 }
 
